# DataPrepKit-Py

./: Pipfile  README.md  main.py  pyproject.toml  test.py
src/: example.py
src/to_read/: test.csv  test.json
to_read/: test.xlsx
