[project]
name = "DataPrepKit_Magdy_Ahmed"
version = "0.0.1"
authors = [
  { name="Magdy Ahmed AbdElbasset", email="magdyahmedabdelbasset@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/magdy-abdelbasset/DataPrepKit-Py"
Issues = "https://github.com/magdy-abdelbasset/DataPrepKit-Py/issues"